syntax = "proto3";

package az.fitnest.order;

option java_multiple_files = true;
option java_package = "az.fitnest.order.grpc";
option java_outer_classname = "MembershipPlanProto";

service MembershipPlanService {
  rpc GetGymPlans(GetGymPlansRequest) returns (GetGymPlansResponse);
}

message GetGymPlansRequest {
  int64 gym_id = 1;
}

message GetGymPlansResponse {
  repeated GymMembershipPlan plans = 1;
}

message GymMembershipPlan {
  int64 plan_id = 1;
  string name = 2;
  string currency = 3;
  bool is_active = 4;
  repeated PlanDurationOption options = 5;
  repeated string benefits = 6;
}

message PlanDurationOption {
  int32 duration_months = 1;
  string price_standard = 2;
  string price_discounted = 3;
  int32 entry_limit = 4;
  int32 freeze_days = 5;
  repeated string services = 6;
}
